# util

./: .gitignore  LICENSE  README.md
dotfiles/: .bash_profile  .zshrc  Preferences.sublime-settings  crontab  crontab-daily-example  env.nix  nix.conf  ssh-config
dotfiles/nix-channels/calvin/: default.nix
dotfiles/nix-channels/nixjars/: default.nix
dotfiles/nix-channels/nixpkgs/: default.nix
wisdom/: CMakeLists.txt  HomebrewFormulae.rb  JavaMemoryModel.java  Lex.x  Makefile  Parse.y  Proofs.tla  bash-arrays.sh  coq-extraction.v  coq-matching.v  coq-reductions.v  coq-unfolding.v  coq.v  cross-compiling.txt  data-transfer.sh  dns.sh  dtrace.sh  ffi-helper.c  ffi.hs  ffmpeg.sh  find.sh  git.sh  java-profiling.sh  nix.nix  python-profiling.sh  smtlib.smt2  subjob.sh  versioning.txt
wisdom/maven/: pom.xml
wisdom/maven/onemodule/: pom.xml
wisdom/maven/onemodule/src/main/java/org/calvin/example/: Main.java
wisdom/maven/parent/: pom.xml
